--- a/Homework7/task1/AdministrationDepartment/config/config.properties
+++ b/Homework7/task1/AdministrationDepartment/config/config.properties
@@ -1,4 +1,4 @@
 #Auto-generated config
-#Thu Jan 22 22:59:14 MSK 2026
-rooms.history.limit=100
-rooms.status.change=true
+#Mon Jan 26 18:51:28 MSK 2026
+rooms.history.limit=3
+rooms.status.change=false
